k8s/minikube/common/ftp/deploy-ftp.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ftp-server
  labels:
    app: gridcapa
    component: ftp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridcapa
      component: ftp-server
  template:
    metadata:
      labels:
        app: gridcapa
        component: ftp-server
    spec:
      volumes:
        - name: ftp-data
          persistentVolumeClaim:
            claimName: gridcapa-ftp-data
      containers:
        - name: ftp-server
          image: delfer/alpine-ftp-server
          ports:
            - containerPort: 21
              protocol: TCP
            - containerPort: 21000
              protocol: TCP
            - containerPort: 21001
              protocol: TCP
            - containerPort: 21002
              protocol: TCP
            - containerPort: 21003
              protocol: TCP
            - containerPort: 21004
              protocol: TCP
            - containerPort: 21005
              protocol: TCP
            - containerPort: 21006
              protocol: TCP
            - containerPort: 21007
              protocol: TCP
            - containerPort: 21008
              protocol: TCP
            - containerPort: 21009
              protocol: TCP
            - containerPort: 21010
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: ftp-data
              mountPath: /data/gridcapa
          imagePullPolicy: Always
      restartPolicy: Always
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: filebrowser
  labels:
    app: gridcapa
    component: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridcapa
      component: filebrowser
  template:
    metadata:
      labels:
        app: gridcapa
        component: filebrowser
    spec:
      volumes:
        - name: ftp-data
          persistentVolumeClaim:
            claimName: gridcapa-ftp-data
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
          volumeMounts:
            - name: ftp-data
              mountPath: /srv/ftp
          imagePullPolicy: Always
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: filebrowser
  labels:
    app: gridcapa
    component: filebrowser
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: gridcapa
    component: filebrowser
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: ftp-server
  labels:
    app: gridcapa
    component: ftp-server
spec:
  ports:
    - name: ftp-server
      protocol: TCP
      port: 21
      targetPort: 21
    - name: ftp-server-data-0
      protocol: TCP
      port: 21000
      targetPort: 21000
    - name: ftp-server-data-1
      protocol: TCP
      port: 21001
      targetPort: 21001
    - name: ftp-server-data-2
      protocol: TCP
      port: 21002
      targetPort: 21002
    - name: ftp-server-data-3
      protocol: TCP
      port: 21003
      targetPort: 21003
    - name: ftp-server-data-4
      protocol: TCP
      port: 21004
      targetPort: 21004
    - name: ftp-server-data-5
      protocol: TCP
      port: 21005
      targetPort: 21005
    - name: ftp-server-data-6
      protocol: TCP
      port: 21006
      targetPort: 21006
    - name: ftp-server-data-7
      protocol: TCP
      port: 21007
      targetPort: 21007
    - name: ftp-server-data-8
      protocol: TCP
      port: 21008
      targetPort: 21008
    - name: ftp-server-data-9
      protocol: TCP
      port: 21009
      targetPort: 21009
    - name: ftp-server-data-10
      protocol: TCP
      port: 21010
      targetPort: 21010
  selector:
    app: gridcapa
    component: ftp-server
  type: ClusterIP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: filebrowser
  labels:
    app: gridcapa
    component: filebrowser
spec:
  ingressClassName: nginx
  rules:
    - host: filebrowser.farao-local-community.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
